# lib/db/src/schema/index.ts
@@ -14,3 +14,4 @@ export * from "./views";
 export * from "./notification-prefs";
 export * from "./reports";
 export * from "./users";
+export * from "./collaborators";
